replaced inefficient number constructor